--- a/src/App.css
+++ b/src/App.css
@@ -71,13 +71,28 @@
     width: 100%;
 }
 
-.boton-vaciar {
+.boton-cart {
     width: 10rem;
     margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 .boton-quitar {
     width: 10rem;
+    margin-bottom: 10px;
+}
+
+.div-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.total-div {
+    flex: 2;
+    border: solid #000000 2px;
+    margin-left: 40%;
+    font-size: 1.5rem;
+    text-align: center;
     margin-bottom: 10px;
 }
 
@@ -156,5 +171,8 @@
 @media screen and (max-width: 640px) {
     * {
         font-size: 12px;
+    }
+    .total-div {
+        margin-left: 15%;
     }
 }
