--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -46,6 +47,17 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.logo {
+    line-height: 30px;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    align-content: center;
+    text-decoration: none;
+    font-family: 'Signika Negative', sans-serif;
+    margin-right: 3rem;
 }
 
 .control-producto {
