--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,12 @@
     flex-direction: row;
 }
 
+.div-flex2 {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 .total-div {
     flex: 2;
     border: solid #000000 2px;
